# imgui-mcp

./: .gitignore  .mcp.json  CMakeLists.txt  LICENSE  Makefile  README.md  demo.py  pyproject.toml  release.sh  server.py  setup.ps1  setup.sh
.cline/: mcp.json
.codex/: config.toml
.continue/: config.yaml
.cursor/: mcp.json
.github/workflows/: release.yml
.omp/: mcp.json
.omp/memory/: imgui-mcp-project.md
.roo/: mcp.json
.windsurf/: mcp.json
.zed/: settings.json
cmake/: mingw-w64-x86_64.cmake
src/: commands.cpp  main.cpp  render.cpp  types.h
tests/: test_native_protocol.py  test_server.py
